# pj-movie-upload

./: .env.sample  .gitignore  pyproject.toml
memo/: objective.md  plan.md
memo/tiktok/: README.md
memo/youtube/: README.md
poc/tiktok/: README.md  requirements.txt
poc/youtube/: README.md  requirements.txt
