[project]
name = "pj-movie-upload"
version = "0.1.0"
description = "SNS動画連携機能の調査・検証プロジェクト"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
youtube = [
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
    "python-dotenv>=1.0.0",
]
tiktok = [
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = []

